--- a/html/eventApply.html
+++ b/html/eventApply.html
@@ -710,12 +710,12 @@
                                     <li>
                                         <div class="header">
                                             <div>
-                                                <p class="first">前派</p>
-                                                <p class="head">公司活動前派固定型</p>
+                                                <p class="first">11</p>
+                                                <!-- <p class="head">公司活動前派固定型</p>
                                                 <p class="day-tips">
                                                     <em>2022-01-06 11:39:59</em>
                                                     任務將結束
-                                                </p>
+                                                </p> -->
                                             </div>
                                             <div>
                                                 <p class="first">贈點紀錄</p>
@@ -735,26 +735,34 @@
                                                     <p>不限制</p>
                                                 </li>
                                                 <li>
-                                                    <p class="smallTitle">活動週期</p>
-                                                    <p>每日</p>
+                                                    <p class="smallTitle">應達到流水量</p>
+                                                    <p>100.00</p>
                                                 </li>
                                                 <li>
-                                                    <p class="smallTitle">現在流水量</p>
-                                                    <p class="cur">0</p>
+                                                    <p class="smallTitle">贈送點數</p>
+                                                    <p class="cur">100</p>
                                                 </li>
                                             </ul>
                                             <ul>
                                                 <li>
+                                                    <p class="smallTitle">獲利金額</p>
+                                                    <p>1000</p>
+                                                </li>
+                                            </ul>
+                                            <ul>
+                                                <li>
+                                                    <p class="smallTitle">現在流水量</p>
+                                                    <p>0</p>
+                                                </li>
+                                                <li>
                                                     <p class="smallTitle">當下可領贈點</p>
-                                                    <p>1000.00</p>
+                                                    <p>100.00</p>
                                                 </li>
+                                            </ul>
+                                            <ul>
                                                 <li>
-                                                    <p class="smallTitle">贈送點數</p>
-                                                    <p>1000.00</p>
-                                                </li>
-                                                <li>
-                                                    <p class="smallTitle">有效流水量</p>
-                                                    <p>100</p>
+                                                    <p class="smallTitle">限制遊戲平台</p>
+                                                    <p>不限制</p>
                                                 </li>
                                             </ul>
                                         </div>
@@ -762,12 +770,12 @@
                                     <li>
                                         <div class="header">
                                             <div>
-                                                <p class="first">前派</p>
-                                                <p class="head">公司活動前派固定型</p>
+                                                <p class="first">12</p>
+                                                <!-- <p class="head">公司活動前派固定型</p>
                                                 <p class="day-tips">
                                                     <em>2022-01-06 11:39:59</em>
                                                     任務將結束
-                                                </p>
+                                                </p> -->
                                             </div>
                                             <div>
                                                 <p class="first">贈點紀錄</p>
@@ -787,26 +795,34 @@
                                                     <p>不限制</p>
                                                 </li>
                                                 <li>
-                                                    <p class="smallTitle">活動週期</p>
-                                                    <p>每日</p>
+                                                    <p class="smallTitle">應達到流水量</p>
+                                                    <p>100.00</p>
                                                 </li>
                                                 <li>
-                                                    <p class="smallTitle">現在流水量</p>
-                                                    <p class="cur">0</p>
+                                                    <p class="smallTitle">贈送點數</p>
+                                                    <p class="cur">100</p>
                                                 </li>
                                             </ul>
                                             <ul>
                                                 <li>
+                                                    <p class="smallTitle">獲利金額</p>
+                                                    <p>1000</p>
+                                                </li>
+                                            </ul>
+                                            <ul>
+                                                <li>
+                                                    <p class="smallTitle">現在流水量</p>
+                                                    <p>0</p>
+                                                </li>
+                                                <li>
                                                     <p class="smallTitle">當下可領贈點</p>
-                                                    <p>1000.00</p>
+                                                    <p>100.00</p>
                                                 </li>
+                                            </ul>
+                                            <ul>
                                                 <li>
-                                                    <p class="smallTitle">贈送點數</p>
-                                                    <p>1000.00</p>
-                                                </li>
-                                                <li>
-                                                    <p class="smallTitle">有效流水量</p>
-                                                    <p>100</p>
+                                                    <p class="smallTitle">限制遊戲平台</p>
+                                                    <p>不限制</p>
                                                 </li>
                                             </ul>
                                         </div>
@@ -814,12 +830,12 @@
                                     <li>
                                         <div class="header">
                                             <div>
-                                                <p class="first">前派</p>
-                                                <p class="head">公司活動前派固定型</p>
+                                                <p class="first">13</p>
+                                                <!-- <p class="head">公司活動前派固定型</p>
                                                 <p class="day-tips">
                                                     <em>2022-01-06 11:39:59</em>
                                                     任務將結束
-                                                </p>
+                                                </p> -->
                                             </div>
                                             <div>
                                                 <p class="first">贈點紀錄</p>
@@ -839,26 +855,34 @@
                                                     <p>不限制</p>
                                                 </li>
                                                 <li>
-                                                    <p class="smallTitle">活動週期</p>
-                                                    <p>每日</p>
+                                                    <p class="smallTitle">應達到流水量</p>
+                                                    <p>100.00</p>
                                                 </li>
                                                 <li>
-                                                    <p class="smallTitle">現在流水量</p>
-                                                    <p class="cur">0</p>
+                                                    <p class="smallTitle">贈送點數</p>
+                                                    <p class="cur">100</p>
                                                 </li>
                                             </ul>
                                             <ul>
                                                 <li>
+                                                    <p class="smallTitle">獲利金額</p>
+                                                    <p>1000</p>
+                                                </li>
+                                            </ul>
+                                            <ul>
+                                                <li>
+                                                    <p class="smallTitle">現在流水量</p>
+                                                    <p>0</p>
+                                                </li>
+                                                <li>
                                                     <p class="smallTitle">當下可領贈點</p>
-                                                    <p>1000.00</p>
+                                                    <p>100.00</p>
                                                 </li>
+                                            </ul>
+                                            <ul>
                                                 <li>
-                                                    <p class="smallTitle">贈送點數</p>
-                                                    <p>1000.00</p>
-                                                </li>
-                                                <li>
-                                                    <p class="smallTitle">有效流水量</p>
-                                                    <p>100</p>
+                                                    <p class="smallTitle">限制遊戲平台</p>
+                                                    <p>不限制</p>
                                                 </li>
                                             </ul>
                                         </div>
@@ -957,6 +981,7 @@
                     <li class="title" onclick="window.location.href='../html/vip.html'">優惠</li>
                     <li class="title" onclick="window.location.href='../html/help.html'">幫助中心</li>
                     <li class="title" onclick="window.location.href='../html/help.html'">關於我們</li>
+                    <li class="pright">2021 i99game.net 版權所有 │ 18+</li>
                 </ul>
             </div>
             <div class="footer-site">
