--- a/html/sportPage.html
+++ b/html/sportPage.html
@@ -412,9 +412,10 @@
             <div class="center">
                 <ul>
                     <li class="title openNews">最新公告</li>
-                    <li class="title" onclick="window.location.href='./html/vip.html'">優惠</li>
-                    <li class="title" onclick="window.location.href='./html/help.html'">幫助中心</li>
-                    <li class="title" onclick="window.location.href='./html/help.html'">關於我們</li>
+                    <li class="title" onclick="window.location.href='../html/event.html'">優惠</li>
+                    <li class="title" onclick="window.location.href='../html/help.html'">幫助中心</li>
+                    <li class="title" onclick="window.location.href='../html/help.html'">關於我們</li>
+                    <li class="pright">2021 i99game.net 版權所有 │ 18+</li>
                 </ul>
             </div>
             <div class="footer-site">
