--- a/html/member.html
+++ b/html/member.html
@@ -492,6 +492,7 @@
                                                                 聯絡電話
                                                             </label>
                                                             <input type="text" value="0800123456" readonly>
+                                                            <button type="button" class="smalltyBtn">修改</button>
                                                         </li>
                                                         <li>
                                                             <label>
@@ -499,6 +500,7 @@
                                                                 Email
                                                             </label>
                                                             <input type="text">
+                                                            <button type="button" class="smalltyBtn">修改</button>
                                                         </li>
                                                         <li>
                                                             <label>
@@ -512,6 +514,7 @@
                                                                 LINE
                                                             </label>
                                                             <input type="text">
+                                                            <button type="button" class="smalltyBtn">修改</button>
                                                             <p class="remind">line與WeChat則一填寫即可</p>
                                                         </li>
                                                         <li>
@@ -520,10 +523,11 @@
                                                                 WeChat
                                                             </label>
                                                             <input type="text">
+                                                            <button type="button" class="smalltyBtn">修改</button>
                                                             <p class="remind">line與WeChat則一填寫即可</p>
                                                         </li>
                                                         <li>
-                                                            <button>保存資料</button>
+                                                            <!-- <button>保存資料</button> -->
                                                             <p class="remind np">
                                                                 基本資料有誤? 請<span>聯繫客服</span>
                                                             </p>
