--- a/html/mail.html
+++ b/html/mail.html
@@ -215,146 +215,146 @@
             </div>
         </div>
         <div class="topGameList">
-             <div class="listWrap">
-                 <div class="center">
-                     <i class="prev"></i>
-                     <div class="container">
-                         <ul class="sport">
-                            <li onclick="openSportGame()">
-                                <div>
-                                    <img src="../images/廠商圖/sport/36588.png">
-                                </div>
-                                <p>36588體育</p>
-                            </li>
+            <div class="listWrap">
+                <div class="center">
+                    <i class="prev"></i>
+                    <div class="container">
+                        <ul class="sport">
+                           <li onclick="openSportGame()">
+                               <div>
+                                   <img src="../images/廠商圖/sport/36588.png">
+                               </div>
+                               <p>36588體育</p>
+                           </li>
+                       </ul>
+                        <ul class="live">
+                           <li onclick="openLiveGame()">
+                               <div>
+                                   <img src="../images/廠商圖/live/歐博真人.png">
+                               </div>
+                               <p>歐博</p>
+                           </li>
+                           <li onclick="openLiveGame()">
+                               <div>
+                                   <img src="../images/廠商圖/live/WM真人.png">
+                               </div>
+                               <p>WM</p>
+                           </li>
                         </ul>
-                         <ul class="live">
-                            <li onclick="openLiveGame()">
-                                <div>
-                                    <img src="../images/廠商圖/live/歐博真人.png">
-                                </div>
-                                <p>歐博</p>
-                            </li>
-                            <li onclick="openLiveGame()">
-                                <div>
-                                    <img src="../images/廠商圖/live/WM真人.png">
-                                </div>
-                                <p>WM</p>
-                            </li>
-                         </ul>
-                         <ul class="slot">
-                            <li onclick="openSlotGame()">
-                                <div>
-                                    <img src="../images/廠商圖/slot/bng.png">
-                                </div>
-                                <p>BNG娛樂</p>
-                            </li>
-                            <li onclick="openSlotGame()">
-                                <div>
-                                    <img src="../images/廠商圖/slot/pls.png">
-                                </div>
-                                <p>pls</p>
-                            </li>
-                            <li onclick="openSlotGame()">
-                                <div>
-                                    <img src="../images/廠商圖/slot/simplePlay.png">
-                                </div>
-                                <p>SimplePlay</p>
-                            </li>
-                            <li onclick="openSlotGame()">
-                                <div>
-                                    <img src="../images/廠商圖/slot/rtg.png">
-                                </div>
-                                <p>RTG</p>
-                            </li>
-                            <li onclick="openSlotGame()">
-                                <div>
-                                    <img src="../images/廠商圖/slot/ifun.png">
-                                </div>
-                                <p>IFUN</p>
-                            </li>
-                            <li onclick="openSlotGame()">
-                                <div>
-                                    <img src="../images/廠商圖/slot/bwin.png">
-                                </div>
-                                <p>必贏</p>
-                            </li>
-                            <li onclick="openSlotGame()">
-                                <div>
-                                    <img src="">
-                                </div>
-                                <p>PNG</p>
-                            </li>
-                         </ul>
-                         <ul class="lottery">
-                            <li onclick="openLotteryGame()">
-                                <div>
-                                    <img src="../images/廠商圖/lottery/sg.png">
-                                </div>
-                                <p>SG</p>
-                            </li>
-                            <li onclick="openLotteryGame()">
-                                <div>
-                                    <img src="../images/廠商圖/lottery/gs.png">
-                                </div>
-                                <p>GS</p>
-                            </li>
-                         </ul>
-                         <ul class="fish">
-                            <li onclick="unlogin()">
-                                <div>
-                                    <img src="../images/廠商圖/fish/fish_1.png">
-                                </div>
-                                <p>鳳凰棋牌</p>
-                            </li>
-                            <li onclick="unlogin()">
-                                <div>
-                                    <img src="../images/廠商圖/fish/fish_2.png">
-                                </div>
-                                <p>RSG電子娛樂</p>
-                            </li>
-                            <li onclick="unlogin()">
-                                <div>
-                                    <img src="../images/廠商圖/fish/fish_3.png">
-                                </div>
-                                <p>必贏電子娛樂</p>
-                            </li>
-                            <li onclick="unlogin()">
-                                <div>
-                                    <img src="../images/廠商圖/fish/fish_4.png">
-                                </div>
-                                <p>RTG電子娛樂</p>
-                            </li>
-                            <li onclick="unlogin()">
-                                <div>
-                                    <img src="../images/廠商圖/fish/fish_5.png">
-                                </div>
-                                <p>SP電子娛樂</p>
-                            </li>
-                         </ul>
-                         <ul class="board">
-                            <li onclick="unlogin()">
-                                <div>
-                                    <img src="../images/廠商圖/board/board_1.png">
-                                </div>
-                                <p>PNG電子娛樂</p>
-                            </li>
-                            <li onclick="unlogin()">
-                                <div>
-                                    <img src="../images/廠商圖/board/board_2.png">
-                                </div>
-                                <p>鳳凰棋牌</p>
-                            </li>
-                            <li onclick="unlogin()">
-                                <div>
-                                    <img src="../images/廠商圖/board/board_3.png">
-                                </div>
-                                <p>FUN GAME</p>
-                            </li>
-                         </ul>
-                     </div>
-                     <i class="next"></i>
-                 </div>
-             </div>
+                        <ul class="slot">
+                           <li onclick="openSlotGame()">
+                               <div>
+                                   <img src="../images/廠商圖/slot/bng.png">
+                               </div>
+                               <p>BNG娛樂</p>
+                           </li>
+                           <li onclick="openSlotGame()">
+                               <div>
+                                   <img src="../images/廠商圖/slot/pls.png">
+                               </div>
+                               <p>pls</p>
+                           </li>
+                           <li onclick="openSlotGame()">
+                               <div>
+                                   <img src="../images/廠商圖/slot/simplePlay.png">
+                               </div>
+                               <p>SimplePlay</p>
+                           </li>
+                           <li onclick="openSlotGame()">
+                               <div>
+                                   <img src="../images/廠商圖/slot/rtg.png">
+                               </div>
+                               <p>RTG</p>
+                           </li>
+                           <li onclick="openSlotGame()">
+                               <div>
+                                   <img src="../images/廠商圖/slot/ifun.png">
+                               </div>
+                               <p>IFUN</p>
+                           </li>
+                           <li onclick="openSlotGame()">
+                               <div>
+                                   <img src="../images/廠商圖/slot/bwin.png">
+                               </div>
+                               <p>必贏</p>
+                           </li>
+                           <li onclick="openSlotGame()">
+                               <div>
+                                   <img src="">
+                               </div>
+                               <p>PNG</p>
+                           </li>
+                        </ul>
+                        <ul class="lottery">
+                           <li onclick="openLotteryGame()">
+                               <div>
+                                   <img src="../images/廠商圖/lottery/sg.png">
+                               </div>
+                               <p>SG</p>
+                           </li>
+                           <li onclick="openLotteryGame()">
+                               <div>
+                                   <img src="../images/廠商圖/lottery/gs.png">
+                               </div>
+                               <p>GS</p>
+                           </li>
+                        </ul>
+                        <ul class="fish">
+                           <li onclick="openFishGame()">
+                               <div>
+                                   <img src="../images/廠商圖/fish/fish_1.png">
+                               </div>
+                               <p>鳳凰棋牌</p>
+                           </li>
+                           <li onclick="openFishGame()">
+                               <div>
+                                   <img src="../images/廠商圖/fish/fish_2.png">
+                               </div>
+                               <p>RSG電子娛樂</p>
+                           </li>
+                           <li onclick="openFishGame()">
+                               <div>
+                                   <img src="../images/廠商圖/fish/fish_3.png">
+                               </div>
+                               <p>必贏電子娛樂</p>
+                           </li>
+                           <li onclick="openFishGame()">
+                               <div>
+                                   <img src="../images/廠商圖/fish/fish_4.png">
+                               </div>
+                               <p>RTG電子娛樂</p>
+                           </li>
+                           <li onclick="openFishGame()">
+                               <div>
+                                   <img src="../images/廠商圖/fish/fish_5.png">
+                               </div>
+                               <p>SP電子娛樂</p>
+                           </li>
+                        </ul>
+                        <ul class="board">
+                           <li onclick="openBoardGame()">
+                               <div>
+                                   <img src="../images/廠商圖/board/board_1.png">
+                               </div>
+                               <p>PNG電子娛樂</p>
+                           </li>
+                           <li onclick="openBoardGame()">
+                               <div>
+                                   <img src="../images/廠商圖/board/board_2.png">
+                               </div>
+                               <p>鳳凰棋牌</p>
+                           </li>
+                           <li onclick="openBoardGame()">
+                               <div>
+                                   <img src="../images/廠商圖/board/board_3.png">
+                               </div>
+                               <p>FUN GAME</p>
+                           </li>
+                        </ul>
+                    </div>
+                    <i class="next"></i>
+                </div>
+            </div>
         </div>
     </header>
     <main>
@@ -608,10 +608,14 @@
                 </li>
             </ul>
         </div>
-        <div class="jumpWindow betWindow sportGame01">
+        <div class="jumpWindow betWindow sportGame">
             <i class="close_ic"></i>
-            <div class="betTitle">36588</div>
+            <div class="betTitle">快速轉帳</div>
             <form>
+                <div class="row">
+                    <p>平台</p>
+                    <span>36588</span>
+                </div>
                 <div class="row">
                     <p>中心錢包</p>
                     <input type="text" value="$9999">
@@ -646,10 +650,14 @@
                 <button>進入遊戲</button>
             </div>
         </div>
-        <div class="jumpWindow betWindow liveGame01">
+        <div class="jumpWindow betWindow liveGame">
             <i class="close_ic"></i>
-            <div class="betTitle">ALLBET</div>
+            <div class="betTitle">快速轉帳</div>
             <form>
+                <div class="row">
+                    <p>平台</p>
+                    <span>ALLBET</span>
+                </div>
                 <div class="row">
                     <p>中心錢包</p>
                     <input type="text" value="$9999">
@@ -684,48 +692,15 @@
                 <button>進入遊戲</button>
             </div>
         </div>
-        <div class="jumpWindow betWindow liveGame02">
+        
+        <div class="jumpWindow betWindow lotteryGame">
             <i class="close_ic"></i>
-            <div class="betTitle">WM</div>
+            <div class="betTitle">快速轉帳</div>
             <form>
                 <div class="row">
-                    <p>中心錢包</p>
-                    <input type="text" value="$9999">
+                    <p>平台</p>
+                    <span>SG</span>
                 </div>
-                <div class="row">
-                    <i class="trans_arrow"></i>
-                </div>
-                <div class="row">
-                    <p>WM真人</p>
-                    <input type="text" value="$0">
-                </div>
-                <div class="row">
-                    <p>轉帳金額</p>
-                    <input type="text" value="$100">
-                </div>
-                <div class="row forBtn">
-                    <div class="btnBox">
-                        <button>$100</button>
-                        <button>$500</button>
-                        <button>$1000</button>
-                        <button>$3000</button>
-                        <button>$5000</button>
-                        <button>$10000</button>
-                        <button>全部</button>
-                    </div>
-                </div>
-                <div class="row forBtn">
-                    <button class="check">確認</button>
-                </div>
-            </form>
-            <div class="enterGame">
-                <button>進入遊戲</button>
-            </div>
-        </div>
-        <div class="jumpWindow betWindow lotteryGame01">
-            <i class="close_ic"></i>
-            <div class="betTitle">SG</div>
-            <form>
                 <div class="row">
                     <p>中心錢包</p>
                     <input type="text" value="$9999">
@@ -760,48 +735,15 @@
                 <button>進入遊戲</button>
             </div>
         </div>
-        <div class="jumpWindow betWindow lotteryGame02">
+        
+        <div class="jumpWindow betWindow slotGame">
             <i class="close_ic"></i>
-            <div class="betTitle">GS</div>
+            <div class="betTitle">快速轉帳</div>
             <form>
                 <div class="row">
-                    <p>中心錢包</p>
-                    <input type="text" value="$9999">
+                    <p>平台</p>
+                    <span>SLOT</span>
                 </div>
-                <div class="row">
-                    <i class="trans_arrow"></i>
-                </div>
-                <div class="row">
-                    <p>GS彩票</p>
-                    <input type="text" value="$0">
-                </div>
-                <div class="row">
-                    <p>轉帳金額</p>
-                    <input type="text" value="$100">
-                </div>
-                <div class="row forBtn">
-                    <div class="btnBox">
-                        <button>$100</button>
-                        <button>$500</button>
-                        <button>$1000</button>
-                        <button>$3000</button>
-                        <button>$5000</button>
-                        <button>$10000</button>
-                        <button>全部</button>
-                    </div>
-                </div>
-                <div class="row forBtn">
-                    <button class="check">確認</button>
-                </div>
-            </form>
-            <div class="enterGame">
-                <button>進入遊戲</button>
-            </div>
-        </div>
-        <div class="jumpWindow betWindow slotGame01">
-            <i class="close_ic"></i>
-            <div class="betTitle">老虎機</div>
-            <form>
                 <div class="row">
                     <p>中心錢包</p>
                     <input type="text" value="$9999">
@@ -836,10 +778,14 @@
                 <button>進入遊戲</button>
             </div>
         </div>
-        <div class="jumpWindow betWindow fishGame01">
+        <div class="jumpWindow betWindow fishGame">
             <i class="close_ic"></i>
-            <div class="betTitle">捕魚機</div>
+            <div class="betTitle">快速轉帳</div>
             <form>
+                <div class="row">
+                    <p>平台</p>
+                    <span>FISH</span>
+                </div>
                 <div class="row">
                     <p>中心錢包</p>
                     <input type="text" value="$9999">
@@ -874,10 +820,14 @@
                 <button>進入遊戲</button>
             </div>
         </div>
-        <div class="jumpWindow betWindow boardGame01">
+        <div class="jumpWindow betWindow boardGame">
             <i class="close_ic"></i>
-            <div class="betTitle">棋牌遊戲</div>
+            <div class="betTitle">快速轉帳</div>
             <form>
+                <div class="row">
+                    <p>平台</p>
+                    <span>PNG</span>
+                </div>
                 <div class="row">
                     <p>中心錢包</p>
                     <input type="text" value="$9999">
