--- a/html/fishPage.html
+++ b/html/fishPage.html
@@ -13,7 +13,7 @@
     <script src="../js/slick-1.8.1/slick/slick.min.js"></script>
     <script src="../js/javascript.js"></script>
 </head>
-<body onload="currentTime()">
+<body>
     <header>
         <div class="top">
             <span class="brad">
@@ -299,31 +299,31 @@
                             </li>
                          </ul>
                          <ul class="fish">
-                            <li onclick="unlogin()">
+                            <li onclick="openFishGame()">
                                 <div>
                                     <img src="../images/廠商圖/fish/fish_1.png">
                                 </div>
                                 <p>鳳凰棋牌</p>
                             </li>
-                            <li onclick="unlogin()">
+                            <li onclick="openFishGame()">
                                 <div>
                                     <img src="../images/廠商圖/fish/fish_2.png">
                                 </div>
                                 <p>RSG電子娛樂</p>
                             </li>
-                            <li onclick="unlogin()">
+                            <li onclick="openFishGame()">
                                 <div>
                                     <img src="../images/廠商圖/fish/fish_3.png">
                                 </div>
                                 <p>必贏電子娛樂</p>
                             </li>
-                            <li onclick="unlogin()">
+                            <li onclick="openFishGame()">
                                 <div>
                                     <img src="../images/廠商圖/fish/fish_4.png">
                                 </div>
                                 <p>RTG電子娛樂</p>
                             </li>
-                            <li onclick="unlogin()">
+                            <li onclick="openFishGame()">
                                 <div>
                                     <img src="../images/廠商圖/fish/fish_5.png">
                                 </div>
@@ -331,19 +331,19 @@
                             </li>
                          </ul>
                          <ul class="board">
-                            <li onclick="unlogin()">
+                            <li onclick="openBoardGame()">
                                 <div>
                                     <img src="../images/廠商圖/board/board_1.png">
                                 </div>
                                 <p>PNG電子娛樂</p>
                             </li>
-                            <li onclick="unlogin()">
+                            <li onclick="openBoardGame()">
                                 <div>
                                     <img src="../images/廠商圖/board/board_2.png">
                                 </div>
                                 <p>鳳凰棋牌</p>
                             </li>
-                            <li onclick="unlogin()">
+                            <li onclick="openBoardGame()">
                                 <div>
                                     <img src="../images/廠商圖/board/board_3.png">
                                 </div>
@@ -622,10 +622,14 @@
         </div>
     </footer>
     <div class="filter">
-        <div class="jumpWindow betWindow sportGame01">
+        <div class="jumpWindow betWindow sportGame">
             <i class="close_ic"></i>
-            <div class="betTitle">36588</div>
+            <div class="betTitle">快速轉帳</div>
             <form>
+                <div class="row">
+                    <p>平台</p>
+                    <span>36588</span>
+                </div>
                 <div class="row">
                     <p>中心錢包</p>
                     <input type="text" value="$9999">
@@ -660,10 +664,14 @@
                 <button>進入遊戲</button>
             </div>
         </div>
-        <div class="jumpWindow betWindow liveGame01">
+        <div class="jumpWindow betWindow liveGame">
             <i class="close_ic"></i>
-            <div class="betTitle">ALLBET</div>
+            <div class="betTitle">快速轉帳</div>
             <form>
+                <div class="row">
+                    <p>平台</p>
+                    <span>ALLBET</span>
+                </div>
                 <div class="row">
                     <p>中心錢包</p>
                     <input type="text" value="$9999">
@@ -698,48 +706,15 @@
                 <button>進入遊戲</button>
             </div>
         </div>
-        <div class="jumpWindow betWindow liveGame02">
+        
+        <div class="jumpWindow betWindow lotteryGame">
             <i class="close_ic"></i>
-            <div class="betTitle">WM</div>
+            <div class="betTitle">快速轉帳</div>
             <form>
                 <div class="row">
-                    <p>中心錢包</p>
-                    <input type="text" value="$9999">
+                    <p>平台</p>
+                    <span>SG</span>
                 </div>
-                <div class="row">
-                    <i class="trans_arrow"></i>
-                </div>
-                <div class="row">
-                    <p>WM真人</p>
-                    <input type="text" value="$0">
-                </div>
-                <div class="row">
-                    <p>轉帳金額</p>
-                    <input type="text" value="$100">
-                </div>
-                <div class="row forBtn">
-                    <div class="btnBox">
-                        <button>$100</button>
-                        <button>$500</button>
-                        <button>$1000</button>
-                        <button>$3000</button>
-                        <button>$5000</button>
-                        <button>$10000</button>
-                        <button>全部</button>
-                    </div>
-                </div>
-                <div class="row forBtn">
-                    <button class="check">確認</button>
-                </div>
-            </form>
-            <div class="enterGame">
-                <button>進入遊戲</button>
-            </div>
-        </div>
-        <div class="jumpWindow betWindow lotteryGame01">
-            <i class="close_ic"></i>
-            <div class="betTitle">SG</div>
-            <form>
                 <div class="row">
                     <p>中心錢包</p>
                     <input type="text" value="$9999">
@@ -774,48 +749,15 @@
                 <button>進入遊戲</button>
             </div>
         </div>
-        <div class="jumpWindow betWindow lotteryGame02">
+        
+        <div class="jumpWindow betWindow slotGame">
             <i class="close_ic"></i>
-            <div class="betTitle">GS</div>
+            <div class="betTitle">快速轉帳</div>
             <form>
                 <div class="row">
-                    <p>中心錢包</p>
-                    <input type="text" value="$9999">
+                    <p>平台</p>
+                    <span>SLOT</span>
                 </div>
-                <div class="row">
-                    <i class="trans_arrow"></i>
-                </div>
-                <div class="row">
-                    <p>GS彩票</p>
-                    <input type="text" value="$0">
-                </div>
-                <div class="row">
-                    <p>轉帳金額</p>
-                    <input type="text" value="$100">
-                </div>
-                <div class="row forBtn">
-                    <div class="btnBox">
-                        <button>$100</button>
-                        <button>$500</button>
-                        <button>$1000</button>
-                        <button>$3000</button>
-                        <button>$5000</button>
-                        <button>$10000</button>
-                        <button>全部</button>
-                    </div>
-                </div>
-                <div class="row forBtn">
-                    <button class="check">確認</button>
-                </div>
-            </form>
-            <div class="enterGame">
-                <button>進入遊戲</button>
-            </div>
-        </div>
-        <div class="jumpWindow betWindow slotGame01">
-            <i class="close_ic"></i>
-            <div class="betTitle">老虎機</div>
-            <form>
                 <div class="row">
                     <p>中心錢包</p>
                     <input type="text" value="$9999">
@@ -850,10 +792,14 @@
                 <button>進入遊戲</button>
             </div>
         </div>
-        <div class="jumpWindow betWindow fishGame01">
+        <div class="jumpWindow betWindow fishGame">
             <i class="close_ic"></i>
-            <div class="betTitle">捕魚機</div>
+            <div class="betTitle">快速轉帳</div>
             <form>
+                <div class="row">
+                    <p>平台</p>
+                    <span>PNG</span>
+                </div>
                 <div class="row">
                     <p>中心錢包</p>
                     <input type="text" value="$9999">
@@ -888,10 +834,14 @@
                 <button>進入遊戲</button>
             </div>
         </div>
-        <div class="jumpWindow betWindow boardGame01">
+        <div class="jumpWindow betWindow boardGame">
             <i class="close_ic"></i>
-            <div class="betTitle">棋牌遊戲</div>
+            <div class="betTitle">快速轉帳</div>
             <form>
+                <div class="row">
+                    <p>平台</p>
+                    <span>PNG</span>
+                </div>
                 <div class="row">
                     <p>中心錢包</p>
                     <input type="text" value="$9999">
