--- a/html/lotteryPage.html
+++ b/html/lotteryPage.html
@@ -299,57 +299,57 @@
                            </li>
                         </ul>
                         <ul class="fish">
-                           <li onclick="unlogin()">
-                               <div>
-                                   <img src="../images/廠商圖/fish/fish_1.png">
-                               </div>
-                               <p>鳳凰棋牌</p>
-                           </li>
-                           <li onclick="unlogin()">
-                               <div>
-                                   <img src="../images/廠商圖/fish/fish_2.png">
-                               </div>
-                               <p>RSG電子娛樂</p>
-                           </li>
-                           <li onclick="unlogin()">
-                               <div>
-                                   <img src="../images/廠商圖/fish/fish_3.png">
-                               </div>
-                               <p>必贏電子娛樂</p>
-                           </li>
-                           <li onclick="unlogin()">
-                               <div>
-                                   <img src="../images/廠商圖/fish/fish_4.png">
-                               </div>
-                               <p>RTG電子娛樂</p>
-                           </li>
-                           <li onclick="unlogin()">
-                               <div>
-                                   <img src="../images/廠商圖/fish/fish_5.png">
-                               </div>
-                               <p>SP電子娛樂</p>
-                           </li>
-                        </ul>
-                        <ul class="board">
-                           <li onclick="unlogin()">
-                               <div>
-                                   <img src="../images/廠商圖/board/board_1.png">
-                               </div>
-                               <p>PNG電子娛樂</p>
-                           </li>
-                           <li onclick="unlogin()">
-                               <div>
-                                   <img src="../images/廠商圖/board/board_2.png">
-                               </div>
-                               <p>鳳凰棋牌</p>
-                           </li>
-                           <li onclick="unlogin()">
-                               <div>
-                                   <img src="../images/廠商圖/board/board_3.png">
-                               </div>
-                               <p>FUN GAME</p>
-                           </li>
-                        </ul>
+                            <li onclick="openFishGame()">
+                                <div>
+                                    <img src="../images/廠商圖/fish/fish_1.png">
+                                </div>
+                                <p>鳳凰棋牌</p>
+                            </li>
+                            <li onclick="openFishGame()">
+                                <div>
+                                    <img src="../images/廠商圖/fish/fish_2.png">
+                                </div>
+                                <p>RSG電子娛樂</p>
+                            </li>
+                            <li onclick="openFishGame()">
+                                <div>
+                                    <img src="../images/廠商圖/fish/fish_3.png">
+                                </div>
+                                <p>必贏電子娛樂</p>
+                            </li>
+                            <li onclick="openFishGame()">
+                                <div>
+                                    <img src="../images/廠商圖/fish/fish_4.png">
+                                </div>
+                                <p>RTG電子娛樂</p>
+                            </li>
+                            <li onclick="openFishGame()">
+                                <div>
+                                    <img src="../images/廠商圖/fish/fish_5.png">
+                                </div>
+                                <p>SP電子娛樂</p>
+                            </li>
+                         </ul>
+                         <ul class="board">
+                            <li onclick="openBoardGame()">
+                                <div>
+                                    <img src="../images/廠商圖/board/board_1.png">
+                                </div>
+                                <p>PNG電子娛樂</p>
+                            </li>
+                            <li onclick="openBoardGame()">
+                                <div>
+                                    <img src="../images/廠商圖/board/board_2.png">
+                                </div>
+                                <p>鳳凰棋牌</p>
+                            </li>
+                            <li onclick="openBoardGame()">
+                                <div>
+                                    <img src="../images/廠商圖/board/board_3.png">
+                                </div>
+                                <p>FUN GAME</p>
+                            </li>
+                         </ul>
                     </div>
                     <i class="next"></i>
                 </div>
@@ -374,11 +374,11 @@
                         <div class="btnBox">
                             <div class="innBox">
                                 <ul>
-                                    <li class="lotteryGame01">
+                                    <li class="lotteryGame">
                                         <img src="../images/廠商圖/lottery/sg_btn.png">
                                         <p>SG88六合大樂539</p>
                                     </li>
-                                    <li class="lotteryGame02">
+                                    <li class="lotteryGame">
                                         <img src="../images/廠商圖/lottery/gs_btn.png">
                                         <p>京彩彩票</p>
                                     </li>
@@ -486,10 +486,14 @@
                 </li>
             </ul>
         </div>
-        <div class="jumpWindow betWindow sportGame01">
+        <div class="jumpWindow betWindow sportGame">
             <i class="close_ic"></i>
-            <div class="betTitle">36588</div>
+            <div class="betTitle">快速轉帳</div>
             <form>
+                <div class="row">
+                    <p>平台</p>
+                    <span>36588</span>
+                </div>
                 <div class="row">
                     <p>中心錢包</p>
                     <input type="text" value="$9999">
@@ -524,10 +528,14 @@
                 <button>進入遊戲</button>
             </div>
         </div>
-        <div class="jumpWindow betWindow liveGame01">
+        <div class="jumpWindow betWindow liveGame">
             <i class="close_ic"></i>
-            <div class="betTitle">ALLBET</div>
+            <div class="betTitle">快速轉帳</div>
             <form>
+                <div class="row">
+                    <p>平台</p>
+                    <span>ALLBET</span>
+                </div>
                 <div class="row">
                     <p>中心錢包</p>
                     <input type="text" value="$9999">
@@ -562,48 +570,15 @@
                 <button>進入遊戲</button>
             </div>
         </div>
-        <div class="jumpWindow betWindow liveGame02">
+        
+        <div class="jumpWindow betWindow lotteryGame">
             <i class="close_ic"></i>
-            <div class="betTitle">WM</div>
+            <div class="betTitle">快速轉帳</div>
             <form>
                 <div class="row">
-                    <p>中心錢包</p>
-                    <input type="text" value="$9999">
+                    <p>平台</p>
+                    <span>SG</span>
                 </div>
-                <div class="row">
-                    <i class="trans_arrow"></i>
-                </div>
-                <div class="row">
-                    <p>WM真人</p>
-                    <input type="text" value="$0">
-                </div>
-                <div class="row">
-                    <p>轉帳金額</p>
-                    <input type="text" value="$100">
-                </div>
-                <div class="row forBtn">
-                    <div class="btnBox">
-                        <button>$100</button>
-                        <button>$500</button>
-                        <button>$1000</button>
-                        <button>$3000</button>
-                        <button>$5000</button>
-                        <button>$10000</button>
-                        <button>全部</button>
-                    </div>
-                </div>
-                <div class="row forBtn">
-                    <button class="check">確認</button>
-                </div>
-            </form>
-            <div class="enterGame">
-                <button>進入遊戲</button>
-            </div>
-        </div>
-        <div class="jumpWindow betWindow lotteryGame01">
-            <i class="close_ic"></i>
-            <div class="betTitle">SG88六合大樂539</div>
-            <form>
                 <div class="row">
                     <p>中心錢包</p>
                     <input type="text" value="$9999">
@@ -638,48 +613,14 @@
                 <button>進入遊戲</button>
             </div>
         </div>
-        <div class="jumpWindow betWindow lotteryGame02">
+        <div class="jumpWindow betWindow slotGame">
             <i class="close_ic"></i>
-            <div class="betTitle">京彩彩票</div>
+            <div class="betTitle">快速轉帳</div>
             <form>
                 <div class="row">
-                    <p>中心錢包</p>
-                    <input type="text" value="$9999">
+                    <p>平台</p>
+                    <span>SLOT</span>
                 </div>
-                <div class="row">
-                    <i class="trans_arrow"></i>
-                </div>
-                <div class="row">
-                    <p>GS彩票</p>
-                    <input type="text" value="$0">
-                </div>
-                <div class="row">
-                    <p>轉帳金額</p>
-                    <input type="text" value="$100">
-                </div>
-                <div class="row forBtn">
-                    <div class="btnBox">
-                        <button>$100</button>
-                        <button>$500</button>
-                        <button>$1000</button>
-                        <button>$3000</button>
-                        <button>$5000</button>
-                        <button>$10000</button>
-                        <button>全部</button>
-                    </div>
-                </div>
-                <div class="row forBtn">
-                    <button class="check">確認</button>
-                </div>
-            </form>
-            <div class="enterGame">
-                <button>進入遊戲</button>
-            </div>
-        </div>
-        <div class="jumpWindow betWindow slotGame01">
-            <i class="close_ic"></i>
-            <div class="betTitle">老虎機</div>
-            <form>
                 <div class="row">
                     <p>中心錢包</p>
                     <input type="text" value="$9999">
@@ -714,10 +655,14 @@
                 <button>進入遊戲</button>
             </div>
         </div>
-        <div class="jumpWindow betWindow fishGame01">
+        <div class="jumpWindow betWindow fishGame">
             <i class="close_ic"></i>
-            <div class="betTitle">捕魚機</div>
+            <div class="betTitle">快速轉帳</div>
             <form>
+                <div class="row">
+                    <p>平台</p>
+                    <span>FISH</span>
+                </div>
                 <div class="row">
                     <p>中心錢包</p>
                     <input type="text" value="$9999">
@@ -752,10 +697,14 @@
                 <button>進入遊戲</button>
             </div>
         </div>
-        <div class="jumpWindow betWindow boardGame01">
+        <div class="jumpWindow betWindow boardGame">
             <i class="close_ic"></i>
-            <div class="betTitle">棋牌遊戲</div>
+            <div class="betTitle">快速轉帳</div>
             <form>
+                <div class="row">
+                    <p>平台</p>
+                    <span>PNG</span>
+                </div>
                 <div class="row">
                     <p>中心錢包</p>
                     <input type="text" value="$9999">
