--- a/html/vip.html
+++ b/html/vip.html
@@ -1113,10 +1113,14 @@
                 </li>
             </ul>
         </div>
-        <div class="jumpWindow betWindow sportGame01">
+        <div class="jumpWindow betWindow sportGame">
             <i class="close_ic"></i>
-            <div class="betTitle">36588</div>
+            <div class="betTitle">快速轉帳</div>
             <form>
+                <div class="row">
+                    <p>平台</p>
+                    <span>36588</span>
+                </div>
                 <div class="row">
                     <p>中心錢包</p>
                     <input type="text" value="$9999">
@@ -1151,10 +1155,14 @@
                 <button>進入遊戲</button>
             </div>
         </div>
-        <div class="jumpWindow betWindow liveGame01">
+        <div class="jumpWindow betWindow liveGame">
             <i class="close_ic"></i>
-            <div class="betTitle">ALLBET</div>
+            <div class="betTitle">快速轉帳</div>
             <form>
+                <div class="row">
+                    <p>平台</p>
+                    <span>ALLBET</span>
+                </div>
                 <div class="row">
                     <p>中心錢包</p>
                     <input type="text" value="$9999">
@@ -1189,48 +1197,15 @@
                 <button>進入遊戲</button>
             </div>
         </div>
-        <div class="jumpWindow betWindow liveGame02">
+        
+        <div class="jumpWindow betWindow lotteryGame">
             <i class="close_ic"></i>
-            <div class="betTitle">WM</div>
+            <div class="betTitle">快速轉帳</div>
             <form>
                 <div class="row">
-                    <p>中心錢包</p>
-                    <input type="text" value="$9999">
+                    <p>平台</p>
+                    <span>SG</span>
                 </div>
-                <div class="row">
-                    <i class="trans_arrow"></i>
-                </div>
-                <div class="row">
-                    <p>WM真人</p>
-                    <input type="text" value="$0">
-                </div>
-                <div class="row">
-                    <p>轉帳金額</p>
-                    <input type="text" value="$100">
-                </div>
-                <div class="row forBtn">
-                    <div class="btnBox">
-                        <button>$100</button>
-                        <button>$500</button>
-                        <button>$1000</button>
-                        <button>$3000</button>
-                        <button>$5000</button>
-                        <button>$10000</button>
-                        <button>全部</button>
-                    </div>
-                </div>
-                <div class="row forBtn">
-                    <button class="check">確認</button>
-                </div>
-            </form>
-            <div class="enterGame">
-                <button>進入遊戲</button>
-            </div>
-        </div>
-        <div class="jumpWindow betWindow lotteryGame01">
-            <i class="close_ic"></i>
-            <div class="betTitle">SG</div>
-            <form>
                 <div class="row">
                     <p>中心錢包</p>
                     <input type="text" value="$9999">
@@ -1265,48 +1240,15 @@
                 <button>進入遊戲</button>
             </div>
         </div>
-        <div class="jumpWindow betWindow lotteryGame02">
+        
+        <div class="jumpWindow betWindow slotGame">
             <i class="close_ic"></i>
-            <div class="betTitle">GS</div>
+            <div class="betTitle">快速轉帳</div>
             <form>
                 <div class="row">
-                    <p>中心錢包</p>
-                    <input type="text" value="$9999">
+                    <p>平台</p>
+                    <span>SLOT</span>
                 </div>
-                <div class="row">
-                    <i class="trans_arrow"></i>
-                </div>
-                <div class="row">
-                    <p>GS彩票</p>
-                    <input type="text" value="$0">
-                </div>
-                <div class="row">
-                    <p>轉帳金額</p>
-                    <input type="text" value="$100">
-                </div>
-                <div class="row forBtn">
-                    <div class="btnBox">
-                        <button>$100</button>
-                        <button>$500</button>
-                        <button>$1000</button>
-                        <button>$3000</button>
-                        <button>$5000</button>
-                        <button>$10000</button>
-                        <button>全部</button>
-                    </div>
-                </div>
-                <div class="row forBtn">
-                    <button class="check">確認</button>
-                </div>
-            </form>
-            <div class="enterGame">
-                <button>進入遊戲</button>
-            </div>
-        </div>
-        <div class="jumpWindow betWindow slotGame01">
-            <i class="close_ic"></i>
-            <div class="betTitle">老虎機</div>
-            <form>
                 <div class="row">
                     <p>中心錢包</p>
                     <input type="text" value="$9999">
@@ -1341,10 +1283,14 @@
                 <button>進入遊戲</button>
             </div>
         </div>
-        <div class="jumpWindow betWindow fishGame01">
+        <div class="jumpWindow betWindow fishGame">
             <i class="close_ic"></i>
-            <div class="betTitle">捕魚機</div>
+            <div class="betTitle">快速轉帳</div>
             <form>
+                <div class="row">
+                    <p>平台</p>
+                    <span>FISH</span>
+                </div>
                 <div class="row">
                     <p>中心錢包</p>
                     <input type="text" value="$9999">
@@ -1379,10 +1325,14 @@
                 <button>進入遊戲</button>
             </div>
         </div>
-        <div class="jumpWindow betWindow boardGame01">
+        <div class="jumpWindow betWindow boardGame">
             <i class="close_ic"></i>
-            <div class="betTitle">棋牌遊戲</div>
+            <div class="betTitle">快速轉帳</div>
             <form>
+                <div class="row">
+                    <p>平台</p>
+                    <span>PNG</span>
+                </div>
                 <div class="row">
                     <p>中心錢包</p>
                     <input type="text" value="$9999">
